src/api/dcps/gapi/include/gapi.h

typedef char                                    gapi_char;
typedef unsigned char                           gapi_boolean;
typedef gapi_char *                             gapi_string;
typedef c_char      gapi_char;
typedef c_bool      gapi_boolean;
typedef c_string    gapi_string;
typedef c_bool (*gapi_ReaderInstanceAction)(v_dataReaderInstance instance, c_voidp arg);
typedef void (*gapi_readerAction) (c_voidp from, c_voidp to);
typedef gapi_handle gapi_object;
/*
 * typedef HANDLE_TYPE_NATIVE InstanceHandle_t;
 */
typedef GAPI_HANDLE_TYPE_NATIVE gapi_instanceHandle_t;
/*
 * typedef long ReturnCode_t;
 */
typedef gapi_long gapi_returnCode_t;
typedef gapi_object gapi_typeSupport;
OS_API typedef void (*gapi_delete_action)(void *userData, void *arg);
/*
 * interface DomainParticipant : Entity {
 */
typedef gapi_object gapi_domainParticipant;
/*     ReturnCode_t
 *     get_discovered_participants (
 *         inout InstanceHandleSeq participant_handles);
 */
OS_API gapi_returnCode_t
gapi_domainParticipant_get_discovered_participants (
    gapi_domainParticipant _this,
    gapi_ReaderInstanceAction action,
    c_voidp arg);
/*     ReturnCode_t
 *     get_discovered_participant_data (
 *         in InstanceHandle_t handle,
 *         inout ParticipantBuiltinTopicData *participant_data);
 */
OS_API gapi_returnCode_t
gapi_domainParticipant_get_discovered_participant_data (
    gapi_domainParticipant _this,
    c_voidp participant_data,
    gapi_instanceHandle_t handle,
    gapi_readerAction action);
/*     ReturnCode_t
 *     get_discovered_topics (
 *         inout InstanceHandleSeq topic_handles);
 */
OS_API gapi_returnCode_t
gapi_domainParticipant_get_discovered_topics (
    gapi_domainParticipant _this,
    gapi_ReaderInstanceAction action,
    c_voidp arg);
/*     ReturnCode_t
 *     get_discovered_topic_data (
 *         in InstanceHandle_t handle,
 *         inout TopicBuiltinTopicData *topic_data);
 */
OS_API gapi_returnCode_t
gapi_domainParticipant_get_discovered_topic_data (
    gapi_domainParticipant _this,
    c_voidp topic_data,
    gapi_instanceHandle_t handle,
    gapi_readerAction action);
/*     Boolean
 *     contains_entity (
 *         in InstanceHandle_t a_hande);
 */
OS_API gapi_boolean
gapi_domainParticipant_contains_entity (
    gapi_domainParticipant _this,
    gapi_instanceHandle_t  a_handle);
/*     ReturnCode_t
 *     get_current_time (
 *         inout Time_t current_time);
 */
OS_API gapi_returnCode_t
gapi_domainParticipant_get_current_time (
    gapi_domainParticipant _this,
    gapi_time_t  *current_time);
OS_API gapi_returnCode_t
gapi_domainParticipant_delete_historical_data (
    gapi_domainParticipant _this,
    const gapi_string partition_expression,
    const gapi_string topic_expression);
/*     gapi_metaDescription
 *     get_type_metadescription (
 *         in string type_name);
 */
typedef void *gapi_metaDescription;
OS_API gapi_metaDescription
gapi_domainParticipant_get_type_metadescription (
    gapi_domainParticipant _this,
    const gapi_char *type_name);
/*     gapi_typeSupport
 *     get_typesupport (
 *         in string registered_name);
 */
OS_API gapi_typeSupport
gapi_domainParticipant_get_typesupport (
    gapi_domainParticipant _this,
    const gapi_char *type_name);
/*     gapi_typeSupport
 *     find_typesupport (
 *         in string registered_type_name);
 */
OS_API gapi_typeSupport
gapi_domainParticipant_lookup_typesupport (
    gapi_domainParticipant _this,
    const gapi_char *type_name);