src/api/dcps/sacs/code/DDS/OpenSplice/Gapi/DomainParticipant.cs


        /*     ReturnCode_t
         *     get_discovered_participants (
         *         inout InstanceHandleSeq participant_handles);
         */
        [DllImport("ddskernel", EntryPoint = "gapi_domainParticipant_get_discovered_participants")]
        public static extern ReturnCode get_discovered_participants(
            IntPtr _this,
            Delegate action,
            IntPtr arg);

        /*     ReturnCode_t
         *     get_discovered_participant_data (
         *         in InstanceHandle_t handle,
         *         inout ParticipantBuiltinTopicData *participant_data,
         *         in gapi_readerAction action);
         */
        [DllImport("ddskernel", EntryPoint = "gapi_domainParticipant_get_discovered_participant_data")]
        public static extern ReturnCode get_discovered_participant_data(
            IntPtr _this,
            IntPtr participant_data,
            long handle,
            Delegate action);

        /*     ReturnCode_t
         *     get_discovered_topics (
         *         inout InstanceHandleSeq topic_handles);
         */
        [DllImport("ddskernel", EntryPoint = "gapi_domainParticipant_get_discovered_topics")]
        public static extern ReturnCode get_discovered_topics(
           IntPtr _this,
           Delegate action,
           IntPtr arg);

        /*     ReturnCode_t
         *     get_discovered_topic_data (
         *         in InstanceHandle_t handle,
         *         inout TopicBuiltinTopicData *topic_data);
         */
        [DllImport("ddskernel", EntryPoint = "gapi_domainParticipant_get_discovered_topic_data")]
        public static extern ReturnCode get_discovered_topic_data(
            IntPtr _this,
            IntPtr topic_data,
            long handle,
            Delegate action);

        /*     Boolean
         *     contains_entity (
         *         in InstanceHandle_t a_hande);
         */
        [DllImport("ddskernel", EntryPoint = "gapi_domainParticipant_contains_entity")]
        public static extern byte contains_entity(
            IntPtr _this,
            InstanceHandle a_handle);

        /*     ReturnCode_t
         *     get_current_time (
         *         inout Time_t current_time);
         */
        [DllImport("ddskernel", EntryPoint = "gapi_domainParticipant_get_current_time")]
        public static extern ReturnCode get_current_time(
            IntPtr _this,
            out Time current_time);

        [DllImport("ddskernel", EntryPoint = "gapi_domainParticipant_delete_historical_data")]
        public static extern ReturnCode delete_historical_data(
            IntPtr _this,
            string partition_expression,
            string topic_expression);

        /*     gapi_metaDescription
         *     get_type_metadescription (
         *         in string type_name);
         */
        //typedef void *gapi_metaDescription;

        [DllImport("ddskernel", EntryPoint = "gapi_domainParticipant_get_type_metadescription")]
        public static extern IntPtr get_type_metadescription(
            IntPtr _this,
            string type_name);

        /*     gapi_typeSupport
         *     get_typesupport (
         *         in string registered_name);
         */
        [DllImport("ddskernel", EntryPoint = "gapi_domainParticipant_get_typesupport")]
        public static extern IntPtr get_typesupport(
            IntPtr _this,
            string type_name);

        /*     gapi_typeSupport
         *     find_typesupport (
         *         in string registered_type_name);
         */
        [DllImport("ddskernel", EntryPoint = "gapi_domainParticipant_lookup_typesupport")]
        public static extern IntPtr lookup_typesupport(
            IntPtr _this,
            string type_name);
    }
}
